--- a/CSS/materialize.css
+++ b/CSS/materialize.css
@@ -2981,7 +2981,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #0d86b6c2;
 }
 
 .page-footer .footer-copyright {
