--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,3 +7,27 @@ body {
 main {
   flex: 1 0 auto;
 }
+
+#background {
+  background-image: url("../Assets/Images/background_formaunivstraslpdwca21.jpg");
+  height: 50vh;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  
+}
+
+.center {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+figcaption {
+  font-style: italic;
+  background-color: black;
+  width: 100%;
+  color: white;
+}
+
